# stereo

./: CMakeLists.txt  atest  atest.cpp
compare_src/: CMakeCache.txt  CMakeLists.txt  Makefile  btest  btest.cpp  cmake_install.cmake  dir_list.txt
src/: BP_motion.h  census.h  filter.h  frame.h  frame_cmotion.h  gradient.h  mesh.h  patch.h  test.h
src/BP/: BasicFun.h  Cost_Aggre.cpp  MatchCost.cpp  Optimization.cpp  Optimization.h  Post_Proc.h  main.cpp  main.h
src/BP_old/: BasicFun.cpp  Cost_Aggre.cpp  Cost_Aggre.h  MatchCost.h  Optimization.cpp  Optimization.h  Post_Proc.cpp
src/BP_weird/: Cost_Aggre_new.cpp  Optimization_2.cpp  Optimization_new.cpp
src/algTEST/: CMakeLists.txt
src/algTEST/alg_src/: .BP.h.swp  BP.cpp  BP.h  DFT.h  DTF.cpp  Filter.cpp  Filter.h  JointWMF.h  image.h  slic.h
src/algTEST/alg_src/SLIC/: slic.h
src/algTEST/alg_src/orig_main/: main.cppt
